--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,10 @@ block content
     .row
       #jobs
         button.btn.btn-large.create_job Create Job
+        |   Load:
+        input(type="text", name="load")
+        |   Duration (ms)
+        input(type="text", name="duration")
     .row
       p
     .row
